test_resources/lit_class/errors/test3.yr
trait X {
    pub fn foo (self) {
        bar ();
    }
}

class A {
    impl X;
}
